# PalmRead

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ShareSDK.xml
app/src/main/cpp/: palmread-lib.c  palmread-lib.h
app/src/main/res/anim/: pop_come_in.xml  pop_come_out.xml
app/src/main/res/drawable/: collect_item_selector.xml  collect_item_shape_normal.xml  collect_item_shape_selected.xml  dialog_item_selector.xml  editer_shape.xml  home_bottom_selector_go_top.xml  home_bottom_selector_person.xml  home_bottom_selector_share.xml  home_bottom_selector_shoucang.xml  item_click_selector.xml  login_selector.xml  menu_home_selector.xml  menu_person_selector.xml  menu_video_selector.xml  pg.xml  register_selector.xml  shape_dialog.xml  video_item_bottom_comment_selector.xml  video_item_bottom_like_selector.xml  video_item_bottom_tool_selector.xml
app/src/main/res/layout/: activity_editer_user_info.xml  activity_home.xml  activity_homepage_detail.xml  activity_person_collect.xml  activity_person_history.xml  activity_play_video.xml  activity_video_detail.xml  activity_welcome.xml  dialog_editer_user_profire.xml  fragment_collect.xml  fragment_home_collection.xml  fragment_login.xml  fragment_person.xml  fragment_register.xml  fragment_user_logined.xml  fragment_video.xml  fragment_video_detail.xml  fragmnet_home.xml  item_error.xml  item_home.xml  item_loading.xml  item_null.xml  item_video_detail.xml  layout_pop.xml  topbar.xml  view_homepage_bottom.xml  view_videoitem_bottom.xml
(+63 files in other folders)
